--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "googleapis": "^73.0.0",
     "jquery": "^3.6.0",
     "mongoose": "^5.12.10",
     "nodemailer": "^6.6.0",
